--- a/css/base.css
+++ b/css/base.css
@@ -14,6 +14,7 @@ body {
 h1, h2, h3 {
   font-family: 'Dosis', sans-serif;
   font-weight:300;
+  margin-top: 0.5em;
   text-transform: uppercase;
 }
 a {
